--- a/react.html
+++ b/react.html
@@ -13,10 +13,10 @@
 
 <body>
     <h1>Amulya Boggavarapu speed check</h1>
-    <div id="target">Your time: Waiting for reaction...</div>
-    <div id="counter">Count: 0</div>
-    <button id="startButton" onclick="startCountdown()">Start Timer</button>
-    <button id="reactButton" onclick="recordTime()">React</button>
+    <div id="target">Your time: </div>
+    <div id="counter">Count: </div> 
+    <button id="startTimer">Start Timer</button>
+    <button id="react">React</button>
     <script>
         function buttonPress1() {
             setTimeout(function () {
@@ -29,38 +29,34 @@
                 document.getElementById('target').style.color = "red"
             }, 3000)
         }
-        startTime;
-        reactTime;
-        countdownInterval;
+        let reactTime = undefined;
 
-        function startCountdown() {
+        function recordTime() {
+            reactTime = Date.now();
+            console.log("Reaction time recorded: " + reactTime);
+        }
+
+        document.getElementById("react").onclick = recordTime;
+
+        function startTime() {
             for (let i = 0; i < 9; i++) {
-                setTimeout(function () {
-                    document.getElementById("counter").textContent = i;
+                setTimeout(function() {
+                    document.getElementById("counter").innerHTML = "Count: " + i;
                 }, (8 - i) * 1000);
             }
 
-            setTimeout(function () {
+            setTimeout(function() {
                 if (reactTime === undefined) {
-                    document.getElementById("target").textContent = "Too Slow";
+                    document.getElementById("target").innerHTML = "Too Slow";
                 } else {
                     const endTime = Date.now();
-                    const elapsed = endTime - startTime;
-                    document.getElementById("target").textContent = "Time was " + elapsed + " ms";
+                    const elapsed = endTime - reactTime;
+                    document.getElementById("target").innerHTML = "Time was " + elapsed + "ms";
                 }
             }, 8000);
-
-            startTime = Date.now();
         }
 
-        function recordTime() {
-            if (startTime) {
-                reactTime = Date.now() - startTime;
-                document.getElementById("target").textContent = "Your time: " + reactTime + " ms";
-                clearInterval(countdownInterval);
-                startTime = undefined;
-            }
-        }
+        document.getElementById("startTimer").onclick = startTime;
     </script>
 </body>
 
