--- a/pirate.html
+++ b/pirate.html
@@ -27,87 +27,87 @@
         <div class="image-container">
             <div class="row">
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image1" onclick="check(0)">
+                    <img src="location.jpg" alt="Starting Location" id="image0" onclick="check(0)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image2" onclick="check(1)">
+                    <img src="location.jpg" alt="Starting Location" id="image1" onclick="check(1)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image3" onclick="check(2)">
+                    <img src="location.jpg" alt="Starting Location" id="image2" onclick="check(2)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image4" onclick="check(3)">
+                    <img src="location.jpg" alt="Starting Location" id="image3" onclick="check(3)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image5" onclick="check(4)">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image6" onclick="check(5)">
-                </div>
-                <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image7" onclick="check(6)">
-                </div>
-                <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image8" onclick="check(7)">
-                </div>
-                <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image9" onclick="check(8)">
-                </div>
-                <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image10" onclick="check(9)">
+                    <img src="location.jpg" alt="Starting Location" id="image4" onclick="check(4)">
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image11" onclick="check(10)">
+                    <img src="location.jpg" alt="Starting Location" id="image5" onclick="check(5)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image12" onclick="check(11)">
+                    <img src="location.jpg" alt="Starting Location" id="image6" onclick="check(6)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image13" onclick="check(12)">
+                    <img src="location.jpg" alt="Starting Location" id="image7" onclick="check(7)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image14" onclick="check(13)">
+                    <img src="location.jpg" alt="Starting Location" id="image8" onclick="check(8)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image15" onclick="check(14)">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image16" onclick="check(15)">
-                </div>
-                <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image17" onclick="check(16)">
-                </div>
-                <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image18" onclick="check(17)">
-                </div>
-                <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image19" onclick="check(18)">
-                </div>
-                <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image20" onclick="check(19)">
+                    <img src="location.jpg" alt="Starting Location" id="image9" onclick="check(9)">
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image21" onclick="check(20)">
+                    <img src="location.jpg" alt="Starting Location" id="image10" onclick="check(10)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image22" onclick="check(21)">
+                    <img src="location.jpg" alt="Starting Location" id="image11" onclick="check(11)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image23" onclick="check(22)">
+                    <img src="location.jpg" alt="Starting Location" id="image12" onclick="check(12)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image24" onclick="check(23)">
+                    <img src="location.jpg" alt="Starting Location" id="image13" onclick="check(13)">
                 </div>
                 <div class="col-1">
-                    <img src="location.jpg" alt="Starting Location" id="image25" onclick="check(24)">
+                    <img src="location.jpg" alt="Starting Location" id="image14" onclick="check(14)">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <img src="location.jpg" alt="Starting Location" id="image15" onclick="check(15)">
+                </div>
+                <div class="col-1">
+                    <img src="location.jpg" alt="Starting Location" id="image16" onclick="check(16)">
+                </div>
+                <div class="col-1">
+                    <img src="location.jpg" alt="Starting Location" id="image17" onclick="check(17)">
+                </div>
+                <div class="col-1">
+                    <img src="location.jpg" alt="Starting Location" id="image18" onclick="check(18)">
+                </div>
+                <div class="col-1">
+                    <img src="location.jpg" alt="Starting Location" id="image19" onclick="check(19)">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <img src="location.jpg" alt="Starting Location" id="image20" onclick="check(20)">
+                </div>
+                <div class="col-1">
+                    <img src="location.jpg" alt="Starting Location" id="image21" onclick="check(21)">
+                </div>
+                <div class="col-1">
+                    <img src="location.jpg" alt="Starting Location" id="image22" onclick="check(22)">
+                </div>
+                <div class="col-1">
+                    <img src="location.jpg" alt="Starting Location" id="image23" onclick="check(23)">
+                </div>
+                <div class="col-1">
+                    <img src="location.jpg" alt="Starting Location" id="image24" onclick="check(24)">
                 </div>
             </div>
         </div>
@@ -163,20 +163,18 @@
                 rowDiff = Math.abs(rowTreasure - rowLastCheck);
                 colDiff = Math.abs(colTreasure - colLastCheck);
                 var helpResult = "";
-                if (rowDiff + colDiff === 1) {
+                if ((rowDiff === 1 && colDiff === 0) || (rowDiff === 0 && colDiff === 1)) {
                     helpResult = "Can smell it";
                     penalty += 2;
                 } else if (rowDiff + colDiff === 2) {
                     helpResult = "Close Matie";
-
                     penalty += 2;
                 } else {
                     helpResult = "Step Faster";
-
                     penalty += 2;
                 }
                 document.getElementById("penalty").textContent = `Penalty is ${penalty}.`;
-                document.getElementById("help").textContent = `Help report: ${helpResult}.`;
+                document.getElementById("help").textContent = `Help report: ${helpResult}`;
             }
             document.getElementById("helpButton").onclick = help;
         }
