--- a/react.html
+++ b/react.html
@@ -17,6 +17,7 @@
     <div id="counter">Count: </div> 
     <button id="startTimer">Start Timer</button>
     <button id="react">React</button>
+    
     <script>
         function buttonPress1() {
             setTimeout(function () {
@@ -29,7 +30,7 @@
                 document.getElementById('target').style.color = "red"
             }, 3000)
         }
-        let reactTime = undefined;
+        reactTime = undefined;
 
         function recordTime() {
             reactTime = Date.now();
