--- a/merger.html
+++ b/merger.html
@@ -36,9 +36,19 @@
     <button onclick="addEnd()">Add end</button>
     <button onclick="addFront()">Add front</button>
     <button onclick="remove()">Remove</button>
+    <button onclick="makeNewDiv()">Add one</button>
     <button onclick="swapItems()">Swap</button>
+
 </body>
 <script>
+    function makeNewDiv(){
+		let element = document.createElement("div")
+		element.innerHTML = "an item after 3"
+		element.style.color = "orange"
+		let container = document.getElementById('target')
+		container.appendChild(element)
+		
+	}
     function addEnd() {
         inputText = document.getElementById("inputText").value;
         element = document.createElement("div");
