--- a/pirate.html
+++ b/pirate.html
@@ -178,6 +178,23 @@
             }
             document.getElementById("helpButton").onclick = help;
         }
+        /*let trapLocation;
+        let treasureLocation;
+        function newGame() {
+            trapLocation = Math.floor(Math.random() * 25);
+            treasureLocation = Math.floor(Math.random() * 25);
+            checkCount = 0;
+            penalty = 0;
+            lastCheck = 0;
+            gameOver = false;
+            document.getElementById("locations").textContent = "Number of locations checked is zero.";
+            document.getElementById("penalty").textContent = "Penalty is zero.";
+            document.getElementById("help").textContent = "Help report:";
+        }
+        newGame();
+        document.getElementById("newGameButton").onclick = newGame;
+        <button id="newGameButton">New Game</button>
+        */
     </script>
 </body>
 
