--- a/merger.html
+++ b/merger.html
@@ -76,28 +76,29 @@
         }
     }
     function swapItems() {
-    const mergerItems = document.getElementsByClassName("merger");
-    const length = mergerItems.length;
-    if (length >= 2) {
-        const index1 = Math.floor(Math.random() * length);
-        index2 = Math.floor(Math.random() * (length - 1)); 
-        if (index2 >= index1) {
-            index2++; 
-        }
-        item1 = mergerItems[index1];
-        item2 = mergerItems[index2];
-        parent = item1.parentElement;
-        nextSibling = item2.nextSibling;
-        if (nextSibling === item1) {
-            parent.insertBefore(item2, item1);
-        } else if (nextSibling === item2) {
-            parent.insertBefore(item1, item2);
-        } else {
-            parent.insertBefore(item1, nextSibling);
-            parent.insertBefore(item2, item1);
+        const mergerItems = document.getElementsByClassName("merger");
+        const length = mergerItems.length;
+        if (length >= 2) {
+            const index1 = Math.floor(Math.random() * length);
+            let index2 = Math.floor(Math.random() * (length - 1));
+            if (index2 >= index1) {
+                index2++;
+            }
+            const item1 = mergerItems[index1];
+            const item2 = mergerItems[index2];
+            const parent = item1.parentElement;
+            const nextSibling = item2.nextSibling;
+
+            if (nextSibling === item1) {
+                parent.insertBefore(item2, item1);
+            } else if (nextSibling === item2) {
+                parent.insertBefore(item1, item2);
+            } else {
+                parent.insertBefore(item1, nextSibling);
+                parent.insertBefore(item2, item1);
+            }
         }
     }
-}
 
 </script>
 
