--- a/merger.html
+++ b/merger.html
@@ -75,7 +75,7 @@
             mergerItems[middleIndex].remove();
         }
     }
-    function swapItems() {
+    /*function swapItems() {
         const mergerItems = document.getElementsByClassName("merger");
         const length = mergerItems.length;
         if (length >= 2) {
@@ -99,6 +99,7 @@
             }
         }
     }
+    */
 
 </script>
 
