--- a/react.html
+++ b/react.html
@@ -14,10 +14,10 @@
 <body>
     <h1>Amulya Boggavarapu speed check</h1>
     <div id="target">Your time: </div>
-    <div id="counter">Count: </div> 
+    <div id="counter">Count: </div>
     <button id="startTimer">Start Timer</button>
     <button id="react">React</button>
-    
+
     <script>
         function buttonPress1() {
             setTimeout(function () {
@@ -40,24 +40,25 @@
         document.getElementById("react").onclick = recordTime;
 
         function startTime() {
-        const countdownDuration = Math.floor(Math.random() * 9) + 2; 
-        for (let i = 0; i < countdownDuration; i++) {
-            setTimeout(function() {
-                document.getElementById("counter").innerHTML = "Count: " + i;
-            }, (countdownDuration - i) * 1000);
+            const countdownDuration = Math.floor(Math.random() * 9) + 2;
+            for (let i = 0; i < countdownDuration; i++) {
+                setTimeout(function () {
+                    document.getElementById("counter").innerHTML = "Count: " + i;
+                }, (countdownDuration - i) * 1000);
+            }
+
         }
-        
-    }
-           setTimeout(function() {
-                if (reactTime === undefined) {
-                    document.getElementById("target").innerHTML = "Too Slow";
-                } else {
-                    const endTime = Date.now();
-                    const elapsed = endTime - reactTime;
-                    document.getElementById("target").innerHTML = "Time was " + elapsed + "ms";
-                }
-            }, 8000);
+        /*setTimeout(function () {
+            if (reactTime === undefined) {
+                document.getElementById("target").innerHTML = "Too Slow";
+            } else {
+                const endTime = Date.now();
+                const elapsed = endTime - reactTime;
+                document.getElementById("target").innerHTML = "Time was " + elapsed + "ms";
+            }
+        }, 8000);
         document.getElementById("startTimer").onclick = startTime;
+        */
     </script>
 </body>
 
