--- a/react.html
+++ b/react.html
@@ -17,28 +17,13 @@
     <div id="counter">Count: </div>
     <button id="startTimer">Start Timer</button>
     <button id="react">React</button>
-
     <script>
-        function buttonPress1() {
-            setTimeout(function () {
-                document.getElementById('target').style.color = "red"
-            }, 3000)
-        }
-
-        function buttonPress2() {
-            setTimeout(() => {
-                document.getElementById('target').style.color = "red"
-            }, 3000)
-        }
-        reactTime = undefined;
-
+        let reactTime = undefined;
         function recordTime() {
             reactTime = Date.now();
             console.log("Reaction time recorded: " + reactTime);
         }
-
         document.getElementById("react").onclick = recordTime;
-
         function startTime() {
             const countdownDuration = Math.floor(Math.random() * 9) + 2;
             for (let i = 0; i < countdownDuration; i++) {
@@ -46,20 +31,17 @@
                     document.getElementById("counter").innerHTML = "Count: " + i;
                 }, (countdownDuration - i) * 1000);
             }
-
         }
-        /*setTimeout(function () {
+        setTimeout(function () {
             if (reactTime === undefined) {
                 document.getElementById("target").innerHTML = "Too Slow";
             } else {
                 const endTime = Date.now();
                 const elapsed = endTime - reactTime;
-                document.getElementById("target").innerHTML = "Time was " + elapsed + "ms";
+                document.getElementById("target").innerHTML = "Time was " + elapsed + " milliseconds";
             }
         }, 8000);
         document.getElementById("startTimer").onclick = startTime;
-        */
     </script>
 </body>
-
 </html>
