--- a/react.html
+++ b/react.html
@@ -14,11 +14,21 @@
 <body>
     <h1>Amulya Boggavarapu speed check</h1>
     <div id="target">Your time: </div>
-    <div id="counter">Count: </div>
+    <div id="counter">Count: 0</div>
     <button id="startTimer">Start Timer</button>
     <button id="react">React</button>
     <script>
-        let reactTime = undefined;
+        function buttonPress1() {
+            setTimeout(function () {
+                document.getElementById('target').style.color = "red"
+            }, 3000)
+        }
+        function buttonPress2() {
+            setTimeout(() => {
+                document.getElementById('target').style.color = "red"
+            }, 3000)
+        }
+        var reactTime = undefined;
         function recordTime() {
             reactTime = Date.now();
             console.log("Reaction time recorded: " + reactTime);
@@ -31,17 +41,18 @@
                     document.getElementById("counter").innerHTML = "Count: " + i;
                 }, (countdownDuration - i) * 1000);
             }
+            setTimeout(function () {
+                if (reactTime === undefined) {
+                    document.getElementById("target").innerHTML = "Time was : Too Slow";
+                } else {
+                    const endTime = Date.now();
+                    const elapsedTime = endTime - reactTime;
+                    document.getElementById("target").innerHTML = "Time was :" + elapsedTime + "ms";
+                }
+            }, 8000);
         }
-        setTimeout(function () {
-            if (reactTime === undefined) {
-                document.getElementById("target").innerHTML = "Too Slow";
-            } else {
-                const endTime = Date.now();
-                const elapsed = endTime - reactTime;
-                document.getElementById("target").innerHTML = "Time was " + elapsed + " milliseconds";
-            }
-        }, 8000);
         document.getElementById("startTimer").onclick = startTime;
     </script>
 </body>
+
 </html>
